# tp_emsemble_learning

./: Lidao_ensemble_learning_practice_final.ipynb  Mbathe_Paul_Alouda_Lidao_Practice.ipynb  Mbathe_Paul_Practice_Lidao..ipynb  ensemble_learning.ipynb  ensemble_learning_practice_lidao.ipynb  nom_prenom.ipynb  projet.json  pyproject.toml
.ipynb_checkpoints/: Mbathe_Paul_Alouda_Lidao_Practice-checkpoint.ipynb
